@@ -2,7 +2,7 @@ package org.turtleshop.api.modules.product.controller;
 
 import java.net.URI;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.math.BigDecimal;
 
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
@@ -13,8 +13,10 @@ import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.PutMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 import org.turtleshop.api.modules.product.dto.CreateProductRequest;
+import org.turtleshop.api.modules.product.dto.ProductPageResponse;
 import org.turtleshop.api.modules.product.dto.ProductResponse;
 import org.turtleshop.api.modules.product.dto.UpdateProductRequest;
 import org.turtleshop.api.modules.product.model.ProductModel;
@@ -31,10 +33,23 @@ public class ProductController {
 
     @GetMapping
     @PreAuthorize("permitAll()")
-    public List<ProductResponse> getAllProducts() {
-        return productService.getAllProducts().stream()
+    public ProductPageResponse getAllProducts(
+            @RequestParam(defaultValue = "0") int page,
+            @RequestParam(defaultValue = "20") int size,
+            @RequestParam(required = false) String search,
+            @RequestParam(required = false) String sortBy,
+            @RequestParam(required = false) BigDecimal minPrice,
+            @RequestParam(required = false) BigDecimal maxPrice,
+            @RequestParam(required = false) Integer categoryId) {
+        return productService.getAllProducts(page, size, search, sortBy, minPrice, maxPrice, categoryId);
+    }
+
+    @GetMapping(params = "ids")
+    @PreAuthorize("permitAll()")
+    public List<ProductResponse> getProductsByIds(@RequestParam("ids") List<Integer> ids) {
+        return productService.getProductsByIds(ids).stream()
                 .map(ProductResponse::new)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @GetMapping("/{id}")
